# spec-forge

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  config.yaml
.claude/commands/: add-adapter.md  add-port.md  check-quality.md  fuzz.md  iso-check.md  pipeline.md  test-coverage.md
.github/: dependabot.yml
.github/workflows/: ci.yml  fuzz.yml  release.yml
.specify/memory/: constitution.md
examples/: README.md
examples/user_stories/: ecommerce_platform.md  mobile_banking.yaml  saas_project_management.md  sample_us.md
fuzz/: Cargo.toml  README.md
fuzz/artifacts/fuzz_clean_json/: crash-ffa2f64e2533c252f921a9492a30c8a70624346f
fuzz/dictionaries/: json.dict  user_story.dict  xml.dict
fuzz/fuzz_targets/: fuzz_clean_json.rs  fuzz_config_yaml.rs  fuzz_docx_xml.rs  fuzz_docx_zip.rs  fuzz_story_parser.rs  fuzz_template.rs  fuzz_traceability.rs  fuzz_validation.rs
fuzz/seeds/clean_json/: bare_json.json  valid_response.json
fuzz/seeds/docx_xml/: valid_document.xml
fuzz/seeds/story_parser/: sample_en.md  sample_fr.md
output/features/: alertes_et_notifications_paramétrables.feature  authentification_biometrique.feature  categorisation_automatique_des_dépenses.feature  chat_avec_conseiller_bancaire.feature  coffrefort_de_documents_bancaires.feature  consultation_des_soldes_et_des_opérations.feature  contact_conseiller_par_chat.feature  depôt_de_chèque_par_photo.feature  dépôt_de_chèque_par_photo.feature  gestion_des_cartes_bancaires.feature  téléchargement_sécurisé_des_documents_bancaires.feature  virement_instantané_sepa.feature  visualisation_des_dépenses_par_catégorie.feature
output/specs/: spec-specification-9-user-stories.md
src/: lib.rs  main.rs
src-tauri/: Cargo.toml  spec-forge-export-2026-03-05.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/presentation/: events.rs  mod.rs  state.rs
src-tauri/src/presentation/commands/: config_commands.rs  file_commands.rs  llm_commands.rs  mod.rs  model_commands.rs  pipeline_commands.rs
src/adapters/: README.md  mod.rs
src/adapters/input/: docx_reader.rs  markdown_reader.rs  mod.rs  pdf_reader.rs  story_parser.rs  yaml_reader.rs
src/adapters/llm/: mock_adapter.rs  mod.rs  ollama_adapter.rs
src/adapters/output/: gherkin_writer.rs  markdown_writer.rs  mod.rs  traceability_writer.rs
src/adapters/templates/: file_template_engine.rs  mod.rs
src/application/: README.md  generate_tests_service.rs  json_utils.rs  llm_retry.rs  mod.rs  pipeline.rs  pipeline_events.rs  refine_service.rs
src/domain/: README.md  errors.rs  mod.rs  specification.rs  test_case.rs  traceability.rs  user_story.rs  validation.rs
src/infrastructure/: README.md  config.rs  logging.rs
src/ports/: README.md  input_reader.rs  llm_service.rs  mod.rs  output_writer.rs  template_engine.rs
src/tui/: README.md  app.rs  event.rs  log_layer.rs  mod.rs  theme.rs  ui.rs
src/tui/screens/: config.rs  dashboard.rs  (+7 more)
templates/: README.md  generate_tests_system.md  generate_tests_user.md  refine_system.md  refine_user.md
tests/: README.md  integration.rs
tests/fixtures/: mock_generate_response.json  mock_refine_response.json  sample_us.yaml
tests/integration/: test_pipeline.rs  test_readers.rs  test_writers.rs
ui/: eslint.config.js  index.html  package-lock.json  package.json  vitest.config.ts
ui/src/: app.css  router.tsx
(+76 files in other folders)
